<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_tips"
        android:layout_width="300dp"
        android:layout_height="93dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_record_drive_page"
        android:layout_width="174dp"
        android:layout_height="119dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/btn_record_drive_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tips" />

    <Button
        android:id="@+id/btn_rewards"
        android:layout_width="174dp"
        android:layout_height="119dp"
        android:text="@string/btn_rewards"
        app:layout_constraintEnd_toEndOf="@+id/btn_history"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn_leaderbaords"
        app:layout_constraintTop_toTopOf="@+id/btn_leaderbaords" />

    <Button
        android:id="@+id/btn_leaderbaords"
        android:layout_width="174dp"
        android:layout_height="119dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_leaderboards"
        app:layout_constraintStart_toStartOf="@+id/btn_record_drive_page"
        app:layout_constraintTop_toBottomOf="@+id/btn_record_drive_page" />

    <Button
        android:id="@+id/btn_history"
        android:layout_width="174dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/btn_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_record_drive_page"
        app:layout_constraintTop_toTopOf="@+id/btn_record_drive_page" />

    <TextView
        android:id="@+id/txt_userInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_leaderbaords"
        app:layout_constraintVertical_bias="0.731" />

</androidx.constraintlayout.widget.ConstraintLayout>